test/visibility/only/checkUsePathBadAccess.good
checkUsePathBadAccess.chpl:4: error: 'a' undeclared (first use this function)
