test/visibility/only/checkUsePathBadAccess.chpl
use M only b, f1;

f1();
writeln(a);
// Should fail to compile because of a
